--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -341,7 +341,7 @@ footer a:hover{
 // Blog List
 
 .lead-center {
-  padding: 0 0 80px 0;
+  padding: 0 0 40px 0;
 }
 
 .lead-center h1 {
@@ -367,6 +367,11 @@ footer a:hover{
 }
 
 .lead-center p {
+  text-align: center;
+  font-size: 13px;
+  font-weight: 300;
+  margin: 5px 0 0 0;
+  padding: 0 0 0 0;
 }
 
 .lead-center article {
