--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -148,14 +148,12 @@ button {
   font-weight: 100;
   color: #fff;
   background: $black;
-  cursor: pointer;
   padding: 20px 80px;
   display: inline-block;
   margin: 15px 30px;
   border: 2px dashed $black;
   text-transform: uppercase;
   letter-spacing: 2px;
-  outline: none;
   position: relative;
   transition: none;
 }
@@ -388,31 +386,78 @@ footer a:hover{
 
 // Forms
 
-input[type=text] {
-
+input::placeholder, textarea::placeholder {
+  font-size: 0.875em;
 }
 
-input[type=text] :focus {
-
+input:focus::placeholder, textarea::focus:placeholder {
 }
 
-input[type=submit] {
-  border: none;
-  font-size: 17px;
-  font-weight: 100;
-  color: #fff;
+#form {
+  max-width: 760px;
+  margin: 50px auto 60px auto;
+}
+
+#form p {
+  margin: 0;
+}
+
+input {
+  font-family: $font-primary;
+  width: 100%;
+  font-size: 0.875em;
+  height: 50px;
+  padding: 0px 15px 0px 15px;
+  border: solid 1px #b3aca7;
+  border-bottom: none;
+}
+
+textarea {
+  width: 100%;
+  height: 110px;
+  max-height: 110px;
+  margin: 0;
+  padding: 15px;
+  font-family: $font-primary;
+  font-size: 0.875em;
+  border: solid 1px #b3aca7;
+}
+
+#submit {
   background: $black;
-  cursor: pointer;
-  padding: 20px 80px;
-  display: inline-block;
-  margin: 15px 30px;
-  border: 2px dashed $black;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  outline: none;
-  position: relative;
-  transition: none;
+  font-weight: 300;
+  width: 100%;
+  padding: 0;
+  margin: -5px 0px 0px 0px;
+  font-family: $font-primary;
+  font-size: 0.875em;
+  color: $white;
+  border: solid 1px $black;
+  border-top: none;
 }
+
+#submit:hover {
+  color: $black;
+  background: $white;
+  border: 2px dashed $black;
+}
+
+// input[type=submit] {
+//   border: none;
+//   font-size: 17px;
+//   font-weight: 100;
+//   color: #fff;
+//   background: $black;
+//   cursor: pointer;
+//   padding: 20px 80px;
+//   display: inline-block;
+//   margin: 15px 30px;
+//   border: 2px dashed $black;
+//   text-transform: uppercase;
+//   letter-spacing: 2px;
+//   position: relative;
+//   transition: none;
+// }
 
 // 404 Page Not Found
 
